; ModuleID = '/home/carl/AnghaBench/vlc/compat/extr_strcasecmp.c_strcasecmp.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/extr_strcasecmp.c_strcasecmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strcasecmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i64 0, i64* %5, align 8
  br label %9

9:                                                ; preds = %33, %2
  %10 = load i8*, i8** %3, align 8
  %11 = load i64, i64* %5, align 8
  %12 = getelementptr inbounds i8, i8* %10, i64 %11
  %13 = load i8, i8* %12, align 1
  store i8 %13, i8* %6, align 1
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  %17 = load i8, i8* %16, align 1
  store i8 %17, i8* %7, align 1
  %18 = load i8, i8* %6, align 1
  %19 = call i32 @tolower(i8 zeroext %18)
  %20 = load i8, i8* %7, align 1
  %21 = call i32 @tolower(i8 zeroext %20)
  %22 = sub nsw i32 %19, %21
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %9
  %26 = load i8, i8* %6, align 1
  %27 = icmp ne i8 %26, 0
  br i1 %27, label %30, label %28

28:                                               ; preds = %25, %9
  %29 = load i32, i32* %8, align 4
  ret i32 %29

30:                                               ; preds = %25
  %31 = load i8, i8* %7, align 1
  %32 = call i32 @assert(i8 zeroext %31)
  br label %33

33:                                               ; preds = %30
  %34 = load i64, i64* %5, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %5, align 8
  br label %9
}

declare dso_local i32 @tolower(i8 zeroext) #1

declare dso_local i32 @assert(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
